--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,63 @@
-name: generate animation
+# Nome do Workflow: Aparecerá na aba "Actions" do seu repositório
+name: Deploy Vite site to Pages
 
+# Gatilhos (Triggers): Quando esta ação deve rodar?
 on:
-  # run automatically every 24 hours
-  schedule:
-    - cron: "0 */24 * * *" 
-  
-  # allows to manually run the job at any time
-  workflow_dispatch:
-  
-  # run on every push on the master branch
+  # Roda toda vez que você der um 'push' para a branch 'main'
   push:
-    branches:
-    - master
-    
-  
+    branches: ["main"]
 
+  # Permite que você rode este workflow manualmente pela aba Actions
+  workflow_dispatch:
+
+# Permissões: Garante que o workflow tenha as permissões corretas para fazer o deploy
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Configuração de Concorrência: Evita que múltiplos deploys rodem ao mesmo tempo
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
+# Tarefas (Jobs): O que o workflow vai fazer
 jobs:
-  generate:
-    permissions: 
-      contents: write
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    
+  # Tarefa de build: Compila o seu código
+  build:
+    runs-on: ubuntu-latest # Usa uma máquina virtual Linux (padrão)
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4 # 1. Baixa o código do seu repositório
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4 # 2. Configura o ambiente Node.js
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-          
-          
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+          node-version: 20 # Use uma versão recente do Node.js
+          cache: 'npm' # Ativa o cache para acelerar instalações futuras
+
+      - name: Install dependencies
+        run: npm ci # 3. Instala as dependências do projeto (mais rápido que 'npm install')
+
+      - name: Build project
+        run: npm run build # 4. Roda o script de build para gerar a pasta 'dist'
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5 # Prepara o ambiente para o deploy no Pages
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3 # 5. Envia a pasta 'dist' para ser usada no próximo job
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          path: './dist' # O caminho da pasta que foi gerada pelo 'npm run build'
+
+  # Tarefa de deploy: Publica o código compilado no GitHub Pages
+  deploy:
+    needs: build # 6. Só roda se a tarefa 'build' for bem-sucedida
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }} # Define a URL de deploy
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # 7. Ação final que publica o site
