--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
           cache: 'npm' # Ativa o cache para acelerar instalações futuras
 
       - name: Install dependencies
-        run: npm ci # 3. Instala as dependências do projeto (mais rápido que 'npm install')
-
+        run: npm ci --legacy-peer-deps
+  
       - name: Build project
         run: npm run build # 4. Roda o script de build para gerar a pasta 'dist'
 
